made the aside bar

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +11,44 @@
     <link rel="stylesheet" href="./css/style.css" />
     <title>Multi Step Form</title>
 </head>
+
 <body>
-    
+    <div class="mainContainer">
+        <div class="container">
+
+            <!-- ASIDE BAR -->
+            <aside class="aside">
+                <div class="stepSide">
+                    <div class="stepCircle currentStep" data-stepCircle="1">1</div>
+                    <div class="stepDescription">
+                        <div class="stepNumber">STEP 1</div>
+                        <div class="stepName">YOUR INFO</div>
+                    </div>
+                </div>
+                <div class="stepSide">
+                    <div class="stepCircle" data-stepCircle="2">2</div>
+                    <div class="stepDescription">
+                        <div class="stepNumber">STEP 2</div>
+                        <div class="stepName">SELECT PLAN</div>
+                    </div>
+                </div>
+                <div class="stepSide">
+                    <div class="stepCircle" data-stepCircle="3">3</div>
+                    <div class="stepDescription">
+                        <div class="stepNumber">STEP 3</div>
+                        <div class="stepName">ADD-ONS</div>
+                    </div>
+                </div>
+                <div class="stepSide">
+                    <div class="stepCircle" data-stepCircle="4">4</div>
+                    <div class="stepDescription">
+                        <div class="stepNumber">STEP 4</div>
+                        <div class="stepName">SUMMARY</div>
+                    </div>
+                </div>
+            </aside>
+        </div>
+    </div>
 </body>
+
 </html>
