made structure of bill/submary

--- a/index.html
+++ b/index.html
@@ -252,6 +252,42 @@
                 </div>
             </div>
 
+            <!-- SUBMARRY CONTAINER -->
+            <div class="summaryContainer pageContainers" data-container="summaryContainer">
+                <div class="withHeadingForm">
+                    <div class="heading">
+                        <div class="headingTitle">Finishing up</div>
+                        <div class="headingDescription">
+                            Double-check everything looks OK before confirming.
+                        </div>
+                    </div>
+                    <div class="mainBill">
+                        <div class="services">
+                            <div class="mainPlan">
+                                <div class="mainPlanName">
+                                    <p id="mainPlanName"></p>
+                                    <div class="movetoplans" id="change">Change</div>
+                                </div>
+                                <div class="basePrice" id="basePrice"></div>
+                            </div>
+                            <hr />
+                            <div class="addOnSelected" id="addOnSelected">
+                            </div>
+                        </div>
+                        <div class="total">
+                            <div class="totalName" id="totalName"></div>
+                            <div class="totalPrice" id="totalPrice"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="confirmButtons belowButtons">
+                    <div class="goBack" id="goBack" data-goBack="backToAddOns">Go Back</div>
+                    <button type="submit" id="confirmButton" class="confirmButton buttons">
+                        Confirm
+                    </button>
+                </div>
+            </div>
+
         </div>
     </div>
     <script src='./js/index.js'></script>
