--- a/index.html
+++ b/index.html
@@ -288,6 +288,24 @@
                 </div>
             </div>
 
+            <!-- THANK YOU CONTAINER -->
+            <div class="thankYouContainer pageContainers" data-container="thankYouContainer">
+                <div class="thankyouMessage withHeadingForm">
+                    <div class="pic">
+                        <img src="./assets/images/icon-thank-you.svg" alt="thanku" class="thankYouPic">
+                    </div>
+                    <br/>
+                    <h1 class="thankYouHeading">Thank you!</h1>
+                    <div class="message" id="finalMessage">
+                    </div>
+                </div>            
+                <div class="stepLastButtons belowButtons">
+                    <button type="submit" id="finalButton" class="confirmButton buttons">
+                        Fill Another
+                    </button>
+                </div>
+            </div>
+
         </div>
     </div>
     <script src='./js/index.js'></script>
